--- a/css/style.css
+++ b/css/style.css
@@ -559,56 +559,7 @@ header .search-box .lupita{
     height: 100px;
 }
 
-@media (max-width: 770px) {
-
-    .topper-foot {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-wrap: wrap;
-        padding: 20px;
-        gap: 40px;
-    }
-    
-    .topper-foot > div {
-        width: 100%;
-        text-align: center;
-    }
-    
-    /* Estilo de los títulos en el footer */
-    .topper-foot h3 {
-        font-size: 16px;
-        font-weight: bold;
-        margin-bottom: 10px;
-    }   
-
-    .sec_foot li {
-        margin: 5px 0;
-    }
-    
-    .sec_foot li a {
-        color: black;
-        text-decoration: none;
-    }
-
-    .holder .bot1,
-    .holder .bot2 {
-        top: 72%;
-    }
-
-    .holder .text-overlay2 {
-        top: 50%;
-    }
-
-    .holder .text-overlay1{
-        text-align: center;
-        top: 29%;
-    }
-}
-
-/* Estilos de la pagina del item*/
-
-
+/* Pagina del item*/
 .ruteIndicator{
     height: 40px;
     align-content: center;
@@ -668,7 +619,7 @@ header .search-box .lupita{
 }
 
 .Mitem .L_Mitem .L_Mitem_imgs .mainIMG img:hover{
-    transform: scale(1.2);
+    transform: scale(1.08);
 }
 
 .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras{
@@ -768,12 +719,21 @@ header .search-box .lupita{
     bottom:-20px;
 }
 
+/*Medias Query*/
+
 @media (max-width: 1024px) {
+
+
     header, footer {
-        height: 6rem;
         font-size: 0.9rem;
     }
 
+    .thi_foot > iframe{
+        height: 200px;
+        width: 200px;
+    }
+
+    /*Responsive de la pagina del item*/
     .Mitem {
         flex-direction: column;
         gap: 2rem;
@@ -807,7 +767,7 @@ header .search-box .lupita{
         flex-direction: column;
         justify-content: center;
         height: auto;
-        padding: 1rem;
+
     }
 
     .ruteIndicator {
@@ -883,5 +843,48 @@ header .search-box .lupita{
         padding: 10px;
         border-style: none;
         border-radius: 1%;
+    }
+    .topper-foot {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 20px;
+        gap: 40px;
+    }
+    
+    .topper-foot > div {
+        width: 100%;
+        text-align: center;
+    }
+    
+    /* Estilo de los títulos en el footer */
+    .topper-foot h3 {
+        font-size: 16px;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }   
+
+    .sec_foot li {
+        margin: 5px 0;
+    }
+    
+    .sec_foot li a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .holder .bot1,
+    .holder .bot2 {
+        top: 72%;
+    }
+
+    .holder .text-overlay2 {
+        top: 50%;
+    }
+
+    .holder .text-overlay1{
+        text-align: center;
+        top: 29%;
     }
 }
