--- a/templates/item.html
+++ b/templates/item.html
@@ -1,9 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Item</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -12,10 +11,16 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    
 
+
+    <title>Crossover.sf Shop</title>
 </head>
-  <body>
+<body class="body_background">
+
     <header>
+        <div class="big_navbar">
         <div class="fl_bar">
             <p>Envíos a todo el país!!!</p>
         </div>
@@ -41,7 +46,42 @@
             </nav>
             <hr>
         </div>
+    </div>
     </header>
+
+    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
+        <div class="container-fluid">
+            <div class="nombre_head"><p>Crossover.sf</p></div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENÚ</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+
+                <div class="offcanvas-body">
+                    <div class="links_small_navbar">
+                        <ul>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="productos.html">Productos</a></li>
+                            <li><a href="rebajas.html">Rebajas</a></li>
+                            <li><a href="verano.html">Verano</a></li>
+                            <li><a href="novedades.html">Novedades</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                    <div class="search-box">
+                        <form class="search-box" action="/buscar" method="get">
+                            <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
+                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita" style="color: #ffffff;"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <div class="ruteIndicator">Hombre > Camiseta</div>
 
