Agregado de vinculo de la pagina del item a los cards del index y ajustes de estilos del template contacto

--- a/templates/item.html
+++ b/templates/item.html
@@ -151,7 +151,7 @@
             </div>
             <hr>
             <div class="L_Mitem_com">
-                <p>No hay comentarios todavía :v</p>
+                <p>No hay detalles todavía :v</p>
             </div>
         </div>
 
