--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ header .search-box .lupita{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to bottom right, #d1cfcf, #d4ab7d);
+    background: linear-gradient(to bottom right, #d1cfcf, #152841);
     color: #333;
 }
 
@@ -406,21 +406,21 @@ header .search-box .lupita{
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     width: 100%;
     max-width: 450px;
-    backdrop-filter: blur(10px);
 }
 
 .father_form h1 {
     text-align: center;
-    color: #444;
+    color: #2e2e2e;
     font-size: 2em;
     margin-bottom: 25px;
+    font-weight: bold;
 }
 
 .father_form label {
     font-weight: bold;
     display: block;
     margin-bottom: 8px;
-    color: #555;
+    color: #2e2e2e;
 }
 
 .father_form input[type="text"],
@@ -447,9 +447,8 @@ header .search-box .lupita{
 .father_form input[type="submit"] {
     width: 100%;
     padding: 12px;
-    background: linear-gradient(90deg, #d4ab7d, #e6e4e3);
-    
-    color: #3a3a3a;
+    background: linear-gradient(345deg, #3a3053, #a8a8a8);
+    color: #dfdfdf;
     font-size: 1em;
     font-weight: bold;
     border: none;
@@ -459,8 +458,8 @@ header .search-box .lupita{
 }
 
 .father_form input[type="submit"]:hover {
-    background: linear-gradient(90deg, #ddad8d, #a7968b);
-    transform: scale(1.05);
+    background: linear-gradient(345deg, #5f4e88, #a8a8a8);
+    transform: scale(1.02);
 }
 
 
@@ -1033,5 +1032,9 @@ header .search-box .lupita{
     .holder .text-overlay1{
         text-align: center;
         top: 24%;
+    }
+
+    .father_form {
+        box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
     }
 }
