--- a/templates/novedades.html
+++ b/templates/novedades.html
@@ -93,7 +93,7 @@
                     <div class="social-links">
                         <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                         <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                        <a href=""><i class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
+                        <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
                     </div>
                 </div>
         
