--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,55 @@ header .search-box .lupita{
     object-fit: cover;
   }
 
+  .titular-body-index {
+    width: 100%;
+    height: 10vh;
+    background: linear-gradient(45deg, #e0e0e0, #cfcfcf, #b0b0b0, #dcdcdc, #f5f5f5);
+    background-size: 400% 400%;
+    animation: gradientAnimation 10s infinite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 9px;
+  }
+  
+  .titular-body-index h1 {
+    font-size: 2rem;
+    color: rgb(0, 0, 0);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.562);
+    animation: textEffect 3s ease-in-out infinite;
+  }
+
+/*Keyframes de animaciones*/
+
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  @keyframes textEffect {
+    0% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    50% {
+      transform: translateY(-10px);
+      opacity: 0.7;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+
 /*Medias Query*/
 
 @media (max-width: 1024px) {
