Agregado de imagen, mejorado de imagenes con upscaled IA y correccion de estilos de la barra sobre las cards en el index

--- a/templates/rebajas.html
+++ b/templates/rebajas.html
@@ -85,7 +85,7 @@
     <div class="carrusel_items">
         <div class="item">
             <p class="nombre_item">CAMISA MANGAS CORTAS</p>
-            <img src="../img/Camisa 1.png" alt="producto1">
+            <img src="../assets/img/Camisa_hombre.jpg" alt="producto1">
             <p class="precio_item">$31.800</p>
             <p class="c_item">Camisa floreada para el verano</p>
         </div>
