--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,7 @@ header .search-box .lupita{
     object-fit: cover;
   }
 
+  .separador-titular-small,
   .titular-body-index {
     width: 100%;
     height: 10vh;
@@ -767,6 +768,7 @@ header .search-box .lupita{
     padding-top: 20px;
   }
   
+  .separador-titular-small h1,
   .titular-body-index h1 {
     font-size: 2rem;
     font-weight: bold;
@@ -775,6 +777,10 @@ header .search-box .lupita{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.562);
     animation: textEffect 3s ease-in-out infinite;
   }
+  .separador-titular-small{
+    display: none;
+  }
+
   .fa-angles-down {
     margin: 0 60px;
   }
@@ -838,6 +844,21 @@ header .search-box .lupita{
 }
 
 @media (max-width: 768px) {
+
+    .fa-angles-down {
+        margin: 0 30px;
+        position: relative;
+        top: 3vh;
+    }
+
+    .titular-body-index {
+        display: none;
+    }
+
+    .separador-titular-small{
+        display: unset;
+        
+    }
     header, footer {
         flex-direction: column;
         justify-content: center;
