--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -83,7 +83,7 @@
         <div class="father_form">
             <h1>Formulario de contacto</h1>
         
-            <form action="/submit" method="post">
+            <form action="" method="post">
                 <label for="nombre">Nombre y apellido</label>
                 <input type="text" placeholder="Ingresa tu nombre" name="nombre" id="nombre">
                 <br>
@@ -123,9 +123,9 @@
             <div class="sec_foot">
                 <h3>Información y Preguntas Frecuentes</h3>
                 <ul class="sublinks_1">
-                    <li><a href="">Devoluciones</a></li>
-                    <li><a href="">Métodos de Pago</a></li>
-                    <li><a href="">Métodos de Envío</a></li>
+                    <li><a href="faq.html">Devoluciones</a></li>
+                    <li><a href="faq.html">Métodos de Pago</a></li>
+                    <li><a href="faq.html">Métodos de Envío</a></li>
                 </ul>
             </div>
     
