--- a/templates/productos.html
+++ b/templates/productos.html
@@ -115,9 +115,9 @@
             <div class="sec_foot">
                 <h3>Información y Preguntas Frecuentes</h3>
                 <ul class="sublinks_1">
-                    <li><a href="">Devoluciones</a></li>
-                    <li><a href="">Métodos de Pago</a></li>
-                    <li><a href="">Métodos de Envío</a></li>
+                    <li><a href="faq.html">Devoluciones</a></li>
+                    <li><a href="faq.html">Métodos de Pago</a></li>
+                    <li><a href="faq.html">Métodos de Envío</a></li>
                 </ul>
             </div>
     
