Correccion de estilos de la pagina faq

--- a/css/style.css
+++ b/css/style.css
@@ -810,7 +810,7 @@ header .search-box .lupita{
 
 .accordion-body {
     background-color: #34394b;
-    color: #cecece;
+    color: #e4e1e1;
     border-top: 1px solid #444;
 }
 
