--- a/templates/productos.html
+++ b/templates/productos.html
@@ -81,23 +81,77 @@
     </nav>
 
     
-    <h1>Página donde vamos a poder filtrar y buscar entre todos los elementos</h1>
-    <div class="carrusel_items">
-        <div class="item">
-            <p class="nombre_item">CAMISA MANGAS CORTAS</p>
-            <img src="../img/Camisa 1.png" alt="producto1">
-            <p class="precio_item">$31.800</p>
-            <p class="c_item">Camisa floreada para el verano</p>
+    <div class="carousel-container">
+    <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <!-- Primera fila de productos -->
+            <div class="carousel-item active">
+                <div class="d-flex flex-wrap justify-content-center gap-3">
+                    <!-- Card 1 -->
+                    <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
+                        <img src="../assets/img/Camisas de fibrana/Talle M.jpg" class="card-img-top product-img" alt="Producto 1">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">$10,000</h5>
+                            <p class="card-text">Descripción breve del producto 1.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
+                        <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE FREEDOM LILA.png" class="card-img-top product-img" alt="Producto 2">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">$15,000</h5>
+                            <p class="card-text">Descripción breve del producto 2.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                        </div>
+                    </div>
+                    <!-- Card 3 -->
+                    <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
+                        <img src="../assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top product-img" alt="Producto 3">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">$20,000</h5>
+                            <p class="card-text">Descripción breve del producto 3.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Segunda fila de productos -->
+            <div class="carousel-item">
+                <div class="d-flex flex-wrap justify-content-center gap-3">
+                    <!-- Card 4 -->
+                    <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
+                        <img src="../assets/img/Camisas de fibrana/Talle XL.jpg" class="card-img-top product-img" alt="Producto 4">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">$12,000</h5>
+                            <p class="card-text">Descripción breve del producto 4.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                        </div>
+                    </div>
+                    <!-- Card 5 -->
+                    <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
+                        <img src="../assets/img/Bermudas/Bermuda de jean.png" class="card-img-top product-img" alt="Producto 5">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">$18,000</h5>
+                            <p class="card-text">Descripción breve del producto 5.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <hr style="border: 1/3px solid rgb(230, 230, 230); width: 20%;">
-        <div class="item">
-            <p class="nombre_item">CAMISETA MANGAS CORTAS</p>
-            <img src="../img/remera1.png" alt="producto2">
-            <p class="precio_item">$25.000</p>
-            <p class="c_item">Camiseta verde de algodon</p>
-        </div>
-        <hr style="border: 1/3px solid rgb(230, 230, 230); width: 20%;">
+        <!-- Controles del carrusel -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
     </div>
+</div>
+    
     
     <footer>
 
