Agragado de imagenes, correccion de estilos del carrousel de la pagina de productos

--- a/templates/productos.html
+++ b/templates/productos.html
@@ -82,7 +82,7 @@
 
     
     <div class="carousel-container">
-    <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="productCarousel" class="carousel slide">
         <div class="carousel-inner">
             <!-- Primera fila de productos -->
             <div class="carousel-item active">
@@ -91,9 +91,9 @@
                     <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
                         <img src="../assets/img/Camisas de fibrana/Talle M.jpg" class="card-img-top product-img" alt="Producto 1">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">$10,000</h5>
-                            <p class="card-text">Descripción breve del producto 1.</p>
-                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                            <h5 class="card-title">$18,900</h5>
+                            <p class="card-text">Camisa de fibrana con diseño flowers blue</p>
+                            <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
                         </div>
                     </div>
                     <!-- Card 2 -->
@@ -101,21 +101,22 @@
                         <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE FREEDOM LILA.png" class="card-img-top product-img" alt="Producto 2">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">$15,000</h5>
-                            <p class="card-text">Descripción breve del producto 2.</p>
-                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                            <p class="card-text">Remerón oversize freedom lila con estampa</p>
+                            <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
                         </div>
                     </div>
                     <!-- Card 3 -->
                     <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
                         <img src="../assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top product-img" alt="Producto 3">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">$20,000</h5>
-                            <p class="card-text">Descripción breve del producto 3.</p>
-                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                            <h5 class="card-title">$12,600</h5>
+                            <p class="card-text">Musculosa cosmic oversize celeste con estampa</p>
+                            <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
                         </div>
                     </div>
                 </div>
             </div>
+
             <!-- Segunda fila de productos -->
             <div class="carousel-item">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
@@ -123,18 +124,18 @@
                     <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
                         <img src="../assets/img/Camisas de fibrana/Talle XL.jpg" class="card-img-top product-img" alt="Producto 4">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">$12,000</h5>
-                            <p class="card-text">Descripción breve del producto 4.</p>
-                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                            <h5 class="card-title">$16,780</h5>
+                            <p class="card-text">Camisa de fibrana con diseño de hojas</p>
+                            <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
                         </div>
                     </div>
                     <!-- Card 5 -->
                     <div class="card flex-grow-1" style="max-width: 18rem; min-width: 14rem;">
                         <img src="../assets/img/Bermudas/Bermuda de jean.png" class="card-img-top product-img" alt="Producto 5">
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">$18,000</h5>
-                            <p class="card-text">Descripción breve del producto 5.</p>
-                            <a href="#" class="btn btn-primary mt-auto">Ver más</a>
+                            <h5 class="card-title">$20,300</h5>
+                            <p class="card-text">Bermuda corta de Jean, estilo baggie</p>
+                            <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
                         </div>
                     </div>
                 </div>
